--- a/EatEaze.WebApplicationAPI/appsettings.json
+++ b/EatEaze.WebApplicationAPI/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+    "AllowedHosts": "*",
+    "ConnectionStrings": {
+        "DefaultConnection": "host=postgres;port=5432;database=eateazedatabase;username=eateaze-app;password=Ml37RemA7hEGjI"
+    }
 }
