--- a/EatEaze.WebApplicationAPI/EatEaze.WebApplicationAPI.csproj
+++ b/EatEaze.WebApplicationAPI/EatEaze.WebApplicationAPI.csproj
@@ -14,6 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\EatEaze.Data\EatEaze.Data.csproj" />
     <ProjectReference Include="..\EatEazeServices\EatEaze.Services.csproj" />
   </ItemGroup>
 
