Did the migrations

--- a/EatEaze.WebApplicationAPI/appsettings.json
+++ b/EatEaze.WebApplicationAPI/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
     "AllowedHosts": "*",
-    "ConnectionStrings": {
-        "DefaultConnection": "host=postgres;port=5432;database=eateazedatabase;username=eateaze-app;password=Ml37RemA7hEGjI"
-    }
+  "ConnectionStrings": {
+    "DefaultConnection": "host=localhost;port=5432;database=eateazedatabase;username=eateaze-app;password=Ml37RemA7hEGjI"
+  }
 }
