--- a/EatEaze/EatEaze.csproj
+++ b/EatEaze/EatEaze.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\EatEaze.Data\EatEaze.Data.csproj" />
+  </ItemGroup>
+
 </Project>
