some unit tests

--- a/EatEaze.Tests/EatEaze.Tests.csproj
+++ b/EatEaze.Tests/EatEaze.Tests.csproj
@@ -19,6 +19,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\EatEaze.Data\EatEaze.Data.csproj" />
+    <ProjectReference Include="..\EatEazeServices\EatEaze.Services.csproj" />
     <ProjectReference Include="..\EatEaze\EatEaze.csproj" />
   </ItemGroup>
 
