--- a/EatEaze.WebApplicationAPI/appsettings.json
+++ b/EatEaze.WebApplicationAPI/appsettings.json
@@ -1,12 +1,16 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  },
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
+    },
     "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "DefaultConnection": "host=localhost;port=5432;database=eateazedatabase;username=eateaze-app;password=Ml37RemA7hEGjI"
-  }
+    "ConnectionStrings": {
+        "DefaultConnection": "host=localhost;port=5432;database=eateazedatabase;username=eateaze-app;password=Ml37RemA7hEGjI"
+    },
+    "Jwt": {
+        "Key": "ef7L8x4wI8ISx4io",
+        "Issuer": "EatEazeDomain.com"
+    }
 }
