--- a/EatEazeServices/EatEaze.Services.csproj
+++ b/EatEazeServices/EatEaze.Services.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.25" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\EatEaze.Data\EatEaze.Data.csproj" />
     <ProjectReference Include="..\EatEaze\EatEaze.csproj" />
   </ItemGroup>
