--- a/EatEaze.AdminApplication/EatEaze.AdminApplication.csproj
+++ b/EatEaze.AdminApplication/EatEaze.AdminApplication.csproj
@@ -9,7 +9,19 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.23" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="6.0.23">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.18.1" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="6.0.16" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\EatEaze.Data\EatEaze.Data.csproj" />
+    <ProjectReference Include="..\EatEazeServices\EatEaze.Services.csproj" />
+    <ProjectReference Include="..\EatEaze\EatEaze.csproj" />
   </ItemGroup>
 
 </Project>
