--- a/EatEaze.WebApplicationAPI/appsettings.json
+++ b/EatEaze.WebApplicationAPI/appsettings.json
@@ -7,7 +7,7 @@
     },
     "AllowedHosts": "*",
     "ConnectionStrings": {
-        "DefaultConnection": "host=localhost;port=5432;database=eateazedatabase;username=eateaze-app;password=Ml37RemA7hEGjI"
+        "DefaultConnection": "host=postgres;port=5432;database=eateazedatabase;username=eateaze-app;password=Ml37RemA7hEGjI"
     },
     "Jwt": {
         "Key": "ef7L8x4wI8ISx4io",
