--- a/EatEaze.AdminWebApplication/appsettings.json
+++ b/EatEaze.AdminWebApplication/appsettings.json
@@ -5,8 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "ConnectionStrings": {
-    "DefaultConnection": "host=localhost;port=5432;database=eateazedatabase;username=eateaze-app;password=Ml37RemA7hEGjI"
-  },
+   "ConnectionStrings": {
+       "DefaultConnection": "host=postgres;port=5432;database=eateazedatabase;username=eateaze-app;password=Ml37RemA7hEGjI"
+   },
   "AllowedHosts": "*"
 }
